# lighthouse

./: README.md  pyproject.toml
examples/KernelBench/: README.md  level1.yaml  level2.yaml  test-kernel-bench.py
examples/KernelBench/schedules/x86_64/: lower.yaml  matmul-like.yaml  pack_and_tile.yaml  vectorize.yaml
examples/KernelBench/schedules/x86_64/batch_matmul/: bf16.yaml  f32.yaml
examples/KernelBench/schedules/x86_64/element_wise/: bf16.yaml  common.yaml  f32.yaml
examples/KernelBench/schedules/x86_64/matmul/: bf16.yaml  f32.yaml
examples/KernelBench/schedules/x86_64/matvec/: bf16.yaml  common.yaml  f32.yaml
examples/basic/: compile_and_run.py  transform_a_payload_according_to_a_schedule.py
examples/mpi/: README.md  feed-forward-mpi.py  ff_weight_stationary.py  lit.local.cfg
examples/xegpu/: enumerate_matmul_schedules.py  fused_attention.py  gpt2.py  layer_norm.py  matmul.py  mlp.py  nanoGPT.py  nanogpt.py  simple_gpt.py  torch_matmul.py  tune_matmul_costmodel.py  tune_matmul_ga.py  tune_matmul_gridsearch.py  tune_utils.py
lighthouse/dialects/transform/transform_ext/: __init__.py
lighthouse/dialects/transform/transform_ext/ops/: get_tileable_consumers.py  replace_with_fused_attention.py
lighthouse/execution/: __init__.py  memory_manager.py  runner.py
lighthouse/ingress/mlir_gen/: gpu_attention_payload.py  gpu_layer_norm_payload.py  gpu_matmul_payload.py  gpu_mlp_payload.py
lighthouse/ingress/torch/: compile.py  importer.py
lighthouse/pipeline/: descriptor.py
lighthouse/schedule/: tiling.py
lighthouse/schedule/xegpu/: __init__.py  fused_attention_schedule.py  layer_norm_schedule.py  matmul_constraints.py  matmul_costmodel.py  mlp_schedule.py  xegpu_parameter_selector.py  xegpu_specs.py
lighthouse/transform/: tiling.py
lighthouse/utils/: mlir.py  types.py
tools/: kernel-bench  kernel-bench.yaml
